--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,20 @@
 {
-  "presets": [ "env",  "react" ]
+  "presets": ["env", "react"],
+  "env": {
+    "development" : {
+      "plugins": [
+        ["transform-object-rest-spread"],
+        ["react-transform", {
+          "transforms": [{
+            "transform": "react-transform-hmr",
+            "imports": ["react"],
+            "locals": ["module"]
+          }, {
+            "transform": "react-transform-catch-errors",
+            "imports": ["react", "redbox-react"]
+          }]
+        }]
+      ]
+    }
+  }
 }
