--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,33 @@
 {
-  "extends": "react-app",
+  "parser": "babel-eslint",
+  "plugins": [
+    "react"
+  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "rules": {
+    "react/prop-types": [2],
+    "no-console": 0
+  },
+  "globals": {
+    "require": true,
+    "window": true,
+    "document": true,
+    "module": true,
+    "console": true,
+    "test": true,
+    "expect": true,
+    "global": true,
+    "shallow": true,
+    "mount": true,
+    "jest": true
+  },
   "env": {
-    "browser": true,
-    "node": true
+    "es6": true
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "16.2.0"
+    }
   }
 }
